Go GTEST _ bansai!

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/cmake,c++,python
+/cmake-build-tests/
