--- a/masters/CMakeLists.txt
+++ b/masters/CMakeLists.txt
@@ -9,9 +9,22 @@ message(STATUS "Configuring Source ${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(RL COMPONENTS MDL KIN MATH REQUIRED)
 find_package(Boost REQUIRED COMPONENTS iostreams)
 find_package(PythonLibs REQUIRED)
-#find_package (Python COMPONENTS Interpreter Development Python)
-#set(PYTHON_HEADERS /usr/include/) # path to header
+find_package(Doxygen
+             REQUIRED dot
+             OPTIONAL_COMPONENTS mscgen dia)
+
 include_directories(${PYTHON_INCLUDE_DIRS})
+
+if (DOXYGEN_FOUND)
+    doxygen_add_docs(doxygen_m
+                     ${PROJECT_SOURCE_DIR}
+                     CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile.in
+                     COMMENT "Generating API documentation with Doxygen"
+                     )
+else ()
+    message(WARNING "Doxygen not found, documentation will not be generated.")
+endif ()
+
 
 
 # Fügen Sie Ihre Quelldateien und Header-Dateien hinzu
