--- a/masters/CMakeLists.txt
+++ b/masters/CMakeLists.txt
@@ -1,5 +1,5 @@
 # CMakeLists.txt im "masters"-Ordner
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.27)
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,12 +8,28 @@ message(STATUS "Configuring Source ${CMAKE_CURRENT_SOURCE_DIR}")
 
 find_package(RL COMPONENTS MDL KIN MATH REQUIRED)
 find_package(Boost REQUIRED COMPONENTS iostreams)
-find_package(PythonLibs REQUIRED)
+# Find Python 3 interpreter, compiler, and development environment
+find_package(Python3 COMPONENTS Interpreter Development NumPy)
+
+# Check if Python 3 is found
+if (Python3_FOUND)
+    message(STATUS "Python 3 found: ${Python3_EXECUTABLE}")
+
+    # Include directories for Python 3 and NumPy
+    include_directories(${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})
+
+    # Link options for Python 3
+    set(PYTHON_LINK_OPTIONS ${Python3_LINK_OPTIONS})
+
+    # Additional configurations for your target, if needed
+
+else ()
+    message(WARNING "Python 3 not found. Please make sure Python 3 is installed.")
+endif ()
+
 find_package(Doxygen
              REQUIRED dot
              OPTIONAL_COMPONENTS mscgen dia)
-
-include_directories(${PYTHON_INCLUDE_DIRS})
 message(STATUS "Configuring Project Binary ${PROJECT_SOURCE_DIR}")
 if (DOXYGEN_FOUND)
     doxygen_add_docs(doxygen_m
@@ -25,16 +41,12 @@ else ()
     message(WARNING "Doxygen not found, documentation will not be generated.")
 endif ()
 
-
-
 # Fügen Sie Ihre Quelldateien und Header-Dateien hinzu
 file(GLOB MASTERS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE MASTERS_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
 # Question. This is also adding all cpp from tests to my mastersAPP
 # Group source files in CMakeLists.txt
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${MASTERS_SOURCES} ${MASTERS_HEADERS})
-
-
 # Erstellen Sie die Masters-Bibliothek
 add_library(mastersLibrary ${MASTERS_SOURCES} ${MASTERS_HEADERS})
 # Fügen Sie die include-Verzeichnisse hinzu
@@ -51,15 +63,16 @@ target_include_directories(mastersLibrary
 target_link_libraries(mastersLibrary
                       PUBLIC
                       ${RL_LIBRARIES}
-                      PRIVATE
-                      ${PYTHON_LIBRARIES}
-                      FRIClient
                       Boost::iostreams
+                      FRIClient
+                      PRIVATE
+                      ${PYTHON_LINK_OPTIONS}
+                      ${Python3_LIBRARIES}
                       # Weitere Bibliotheken hinzufügen, falls erforderlich
                       )
 
 # Erstellen Sie das Masters-Beispielprogramm
-add_executable(mastersApp ${MASTERS_SOURCES} ${MASTERS_HEADERS})
+add_executable(mastersApp mastersApp.cpp)
 
 # Linken Sie gegen die erstellte Masters-Bibliothek
 target_link_libraries(mastersApp PRIVATE mastersLibrary)
