--- a/.docker/Dockerfile_mastersApp
+++ b/.docker/Dockerfile_mastersApp
@@ -1,9 +1,14 @@
 FROM mmatosin/rl_app
 LABEL authors="mirko"
 # Install Python3 and Doxygen
+# Install Python3 and Doxygen
 RUN apt-get update && \
-    apt-get install -y python3-dev python3 python3-pip doxygen graphviz  \
+    apt-get install -y python3-dev python3 python3-pip doxygen graphviz \
     libssl-dev libffi-dev
+
+# Install matplotlib
+RUN python3 -m pip install matplotlib
+
 
 ENV PATH="${PATH}:/usr/bin/"
 
@@ -17,5 +22,3 @@ RUN mkdir build && \
     Ninja -S . -B build && \
     cmake --build build --parallel 12
 
-
-ENTRYPOINT ["top", "-b"]
