--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### build
 build
 cmake-build-tests
+.secrets
 # Created by https://www.toptal.com/developers/gitignore/api/cmake,c++,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake,c++,python
 
