--- a/.docker/Dockerfile_mastersApp
+++ b/.docker/Dockerfile_mastersApp
@@ -9,6 +9,14 @@ RUN apt-get update && \
     apt-get install -y python3-dev python3 python3-pip doxygen graphviz \
     libssl-dev libffi-dev
 
+
+RUN useradd -m user && yes password | passwd user
+# Set ownership for directories
+RUN chown user:user -R /app /home/user
+
+# Switch to the user context
+USER user
+
 # Install matplotlib
 RUN python3 -m pip install matplotlib
 
