--- a/.docker/Dockerfile_rl
+++ b/.docker/Dockerfile_rl
@@ -1,5 +1,6 @@
 FROM mmatosin/mybase
 LABEL image_name="mmatosin/roblib_app"
+ENV DEBIAN_FRONTEND noninteractive
 
 WORKDIR /app
 # Build and install the Robotics Library dependencies
@@ -8,7 +9,7 @@ RUN add-apt-repository ppa:roblib/ppa &&\
     apt-get install -y libsolid3d-dev
 
 WORKDIR /opt
-RUN git clone https://github.com/roboticslibrary/rl.git rl
+ADD --keep-git-dir=true https://github.com/roboticslibrary/rl.git rl
 WORKDIR /opt/rl
 RUN rm -rf /opt/rl/.git
 
