--- a/.docker/Dockerfile_rl
+++ b/.docker/Dockerfile_rl
@@ -9,7 +9,7 @@ RUN add-apt-repository ppa:roblib/ppa &&\
     apt-get install -y libsolid3d-dev
 
 WORKDIR /opt
-ADD --keep-git-dir=true https://github.com/roboticslibrary/rl.git rl
+RUN git clone https://github.com/roboticslibrary/rl.git rl
 WORKDIR /opt/rl
 RUN rm -rf /opt/rl/.git
 
