man braucht die -labs syntax

--- a/.docker/Dockerfile_rl
+++ b/.docker/Dockerfile_rl
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.5-labs
 FROM mmatosin/mybase
 LABEL image_name="mmatosin/roblib_app"
 ENV DEBIAN_FRONTEND noninteractive
@@ -7,6 +8,8 @@ WORKDIR /app
 RUN add-apt-repository ppa:roblib/ppa &&\
     apt-get update && \
     apt-get install -y libsolid3d-dev
+
+#ADD --link https://github.com/roboticslibrary/rl.git rl
 
 WORKDIR /opt
 RUN git clone https://github.com/roboticslibrary/rl.git rl
