--- a/.docker/Dockerfile.mastersApp
+++ b/.docker/Dockerfile.mastersApp
@@ -1,18 +1,18 @@
-FROM mmatosin/rl_app
+FROM mmatosin/rl_app AS roblib
 
-LABEL authors="mirko"
-LABEL image_name="mmatosin/master_app"
+LABEL org.zimmer.image.authors="mirko"
+LABEL image_name="mmatosin/masters-app"
 LABEL org.image.authors="@mightymirko"
 LABEL "com.example.vendor"="AndAction"
 LABEL version="1.0"
 LABEL description="This text illustrates \
-that label-values can span multiple lines."
+  that label-values can span multiple lines."
 ENV DEBIAN_FRONTEND noninteractive
 
 # Install Python3 and Doxygen
 RUN apt-get update && \
-    apt-get install -y python3-dev python3 python3-pip doxygen graphviz \
-    libssl-dev libffi-dev
+  apt-get install -y python3-dev python3 python3-pip doxygen graphviz \
+  libssl-dev libffi-dev
 
 RUN useradd -m user && yes password | passwd user
 # Set ownership for directories
@@ -33,9 +33,9 @@ COPY . .
 
 # Build your project
 RUN mkdir build && \
-    cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MAKE_PROGRAM=ninja -DBUILD_FRI_APPS:BOOL=OFF -G \
-    Ninja -S . -B build && \
-    cmake --build build --parallel 12
+  cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MAKE_PROGRAM=ninja -DBUILD_FRI_APPS:BOOL=OFF -G \
+  Ninja -S . -B build && \
+  cmake --build build --parallel 12
 
 # Set the working directory for the final application
 WORKDIR /app/masters
