--- a/.docker/Dockerfile.roblib
+++ b/.docker/Dockerfile.roblib
@@ -1,9 +1,9 @@
 # syntax=docker/dockerfile:1.5-labs
+
 FROM mmatosin/mybase AS base
 LABEL image_name="mmatosin/rl-app"
 ENV DEBIAN_FRONTEND noninteractive
 
-WORKDIR /app
 # Build and install the Robotics Library dependencies
 RUN add-apt-repository ppa:roblib/ppa &&\
     apt-get update && \
@@ -11,13 +11,11 @@ RUN add-apt-repository ppa:roblib/ppa &&\
 
 #ADD --link https://github.com/roboticslibrary/rl.git rl
 
+ARG RL_USE_QT6=ON
 WORKDIR /opt
 RUN git clone https://github.com/roboticslibrary/rl.git rl
 WORKDIR /opt/rl
 RUN rm -rf /opt/rl/.git
-
-ARG RL_USE_QT6=ON
-
 RUN mkdir build
 RUN cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -D RL_USE_QT6=${RL_USE_QT6}
 RUN cmake --build build --parallel 12
@@ -25,5 +23,14 @@ RUN cmake --install build
 
 RUN ldconfig
 
+# Install Python3 and Doxygen
+RUN apt-get update && \
+  apt-get install -y python3-dev python3 python3-pip doxygen graphviz \
+  libssl-dev libffi-dev
+
+# Install matplotlib
+RUN python3 -m pip install matplotlib
+#ENV PATH="/home/user/.local/bin:${PATH}"
+# Set the working directory for the final build
 
 
