--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 build
 cmake-build-tests
 .secrets
+FRI-Client-SDK_Cpp
 # Created by https://www.toptal.com/developers/gitignore/api/cmake,c++,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake,c++,python
 
@@ -223,3 +224,8 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/cmake,c++,python
 
+FRIClientConfigVersion.cmake
+Doxyfile.KUKA_FRI_doxy
+CMakeDoxygenDefaults.cmake
+CMakeDoxyfile.in
+masters/Doxyfile.MastersApp_doxygen
