--- a/.docker/Dockerfile.BaseImage
+++ b/.docker/Dockerfile.BaseImage
@@ -1,7 +1,7 @@
 # Use the official image as a base image
 # Stage 1: Build Stage
 FROM ubuntu:22.04 AS prepare
-LABEL image_name="mmatosin/base_image"
+LABEL image_name="localhost/base_image"
 ENV HOME /root
 SHELL ["/bin/bash", "-c"]
 
