--- a/.docker/Dockerfile.roblib
+++ b/.docker/Dockerfile.roblib
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1.5-labs
 
-FROM mmatosin/mybase AS base
-LABEL image_name="mmatosin/rl-app"
+FROM localhost/mybase AS base
+LABEL image_name="localhost/rl-app"
 ENV DEBIAN_FRONTEND noninteractive
 
 # Build and install the Robotics Library dependencies
